<resources>
    <string name="app_name">My Wallet</string>

    <string name="source">Source</string>
    <string name="amount">Amount</string>
    <string name="add_income">Add Income</string>
    <string name="action_settings">Settings</string>
    <string name="income_added">Income added successfully</string>
    <string name="income_not_added">Fail to add an income</string>
    <string name="in_pocket">In Pocket</string>
    <string name="default_amount">0.00</string>
    <string name="balance">Balance</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="loan">Loan</string>
    <string name="statistic">Statistic</string>
    <string name="euro_sign">€</string>
    <string name="pay_for">Pay For</string>
    <string name="price">Price</string>
    <string name="earned">Earned</string>
    <string name="gift">Gift</string>
    <string name="pay">Pay</string>
    <string name="expense_added">Expense added successfully</string>
    <string name="expense_not_added">Fail to add an expense!</string>
    <string name="default_amount_value">1</string>
    <string name="validation_empty">field can not be empty</string>
    <string name="validation_selected">must be selected</string>
    <string name="type_of_income">Type of income</string>
    <string name="change">change</string>
    <string name="incomes">Incomes</string>
    <string name="expenses">Expenses</string>
    <string name="search">Search</string>
    <string name="day">Day</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="backup">Backup Database</string>
    <string name="restore_backup">Restore Backup</string>
    <string name="OnCard">On Card</string>
    <string name="Cache">Cahce</string>
    <string name="Card">Card</string>
    <string name="payment_type">Payment type</string>
</resources>
