<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="100">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pay_for"
        android:id="@+id/textView4"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etPayFor"
        android:layout_gravity="center_horizontal"
        android:gravity="center" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:weightSum="100"
        android:layout_marginBottom="20dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:id="@+id/textView7"
                android:layout_gravity="center_horizontal" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etExpensePrice"
                android:layout_gravity="center_horizontal"
                android:inputType="numberDecimal"
                android:gravity="center" />
        </LinearLayout>
    </LinearLayout>

    <RadioGroup
        android:layout_width="182dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:id="@+id/rgPaymentType">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Cache"
            android:id="@+id/rbCache"
            android:checked="false"
            android:layout_marginLeft="5dp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Card"
            android:id="@+id/rbCard"
            android:checked="false"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp" />

    </RadioGroup>

    <Button
        android:layout_width="114dp"
        android:layout_height="wrap_content"
        android:text="@string/pay"
        android:id="@+id/btnExpensePay"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:layout_weight="9.71" />

</LinearLayout>