<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="100">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:weightSum="100">

        <EditText
            android:layout_width="109dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/etDay"
            android:layout_gravity="center_horizontal"
            android:layout_weight="30"
            android:hint="@string/day"
            android:gravity="center" />

        <EditText
            android:layout_width="94dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/etMonth"
            android:layout_weight="30"
            android:gravity="center"
            android:hint="@string/month" />

        <EditText
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/etYear"
            android:layout_weight="30"
            android:gravity="center"
            android:hint="@string/year"
            android:text="2016" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:weightSum="100">

        <EditText
            android:layout_width="269dp"
            android:layout_height="fill_parent"
            android:id="@+id/etSearchExpenses"
            android:layout_gravity="center_horizontal"
            android:layout_weight="60"
            android:hint="@string/abc_search_hint" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnSearchExpenses"
            android:layout_weight="40"
            android:text="@string/search" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/twStatisticExpenses"
        android:layout_gravity="center_horizontal"
        android:maxLines = "25"
        android:scrollbars = "vertical"/>

</LinearLayout>