<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Home">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/in_pocket"
            android:id="@+id/textView"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.04" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.04"
            android:id="@+id/llhInPocket"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="52dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/default_amount"
                android:id="@+id/twInPocketAmount"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="52dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/euro_sign"
                android:layout_gravity="center_horizontal"
                android:id="@+id/textView8" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.04"
            android:weightSum="100"
            android:id="@+id/llhInPocketChange"
            android:visibility="gone">

            <EditText
                android:layout_width="225dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:gravity="center"
                android:ems="10"
                android:id="@+id/etInPocket"
                android:layout_gravity="center_horizontal"
                android:layout_weight="50"
                android:visibility="visible" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change"
                android:id="@+id/btnInPocket"
                android:layout_weight="50" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/OnCard"
            android:id="@+id/textView10"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.04" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:layout_weight="0.19"
            android:id="@+id/llhOnCard">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/default_amount"
                android:id="@+id/twOnCardAmount"
                android:gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/euro_sign"
                android:id="@+id/textView11" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.04"
            android:weightSum="100"
            android:id="@+id/llhOnCardChange"
            android:visibility="gone" >

            <EditText
                android:layout_width="225dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:gravity="center"
                android:ems="10"
                android:id="@+id/etOnCard"
                android:layout_gravity="center_horizontal"
                android:layout_weight="50"
                android:visibility="visible" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change"
                android:id="@+id/btnOnCard"
                android:layout_weight="50" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_weight="0.6"
            android:gravity="bottom">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:weightSum="100">

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:text="@string/income"
                    android:id="@+id/btnIncome"
                    android:layout_weight="50"
                    android:background="@color/accent_material_light"
                    android:textColor="@color/abc_primary_text_material_dark"
                    android:layout_margin="5dp" />

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:text="@string/expense"
                    android:id="@+id/btnExpense"
                    android:layout_weight="50"
                    android:textColor="@color/abc_primary_text_material_dark"
                    android:background="@android:color/holo_red_dark"
                    android:layout_margin="5dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="100"
                android:layout_gravity="bottom|center_horizontal">

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/statistic"
                    android:id="@+id/btnStatistic"
                    android:layout_margin="5dp"
                    android:background="@android:color/holo_blue_dark"
                    android:textColor="@color/abc_primary_text_material_dark" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
